# FawnVision

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: ubuntu.yml  windows.yml
API/: Vulkan.cmake
API/Vulkan/: CMakeLists.txt  DeerVulkan.h  DeerVulkan.hpp  DeerVulkan_Core.h  DeerVulkan_Core.hpp  Instance.cpp  Instance.h  Instance.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Presenter.cpp  Presenter.h  Presenter.hpp  RenderPipeline.cpp  RenderPipeline.h  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  Versions.hpp
API/Vulkan/Wrapper/: Base.h  VkCommandBuffer.hpp  VkCommandHandler.cpp  VkCommandHandler.h  VkCommandPool.hpp  VkDevice.cpp  VkDevice.h  VkDevice.hpp  VkFence.cpp  VkFence.h  VkFence.hpp  VkImageView.h  VkImageView.hpp  VkInstance.cpp  VkInstance.h  VkInstance.hpp  VkQueue.cpp  VkQueue.h  VkQueue.hpp  VkSemaphore.cpp  VkSemaphore.h  VkSemaphore.hpp  VkShader.h  VkShader.hpp  VkSurface.cpp  VkSurface.h  VkSurface.hpp  VkSwapChain.cpp  VkSwapChain.h  VkSwapChain.hpp
Font/: .gitignore  README.md
Font/.github/workflows/: ubuntu.yml  windows.yml
Includes/: FawnVision.h  FawnVision.hpp  FawnVision_Core.h  FawnVision_Core.hpp  FawnVision_Error.hpp  FawnVision_Material.hpp  FawnVision_RenderPass.hpp  FawnVision_RenderPassGraph.hpp  FawnVision_Renderer.hpp  FawnVision_Shader.hpp  FawnVision_Window.hpp  FawnVision_WindowEvents.hpp  ObjectDefenitions.h  Renderer.h  Versions.hpp  Window.h
Scripts/: install-vulkan.ps1
Source/: Error.cpp  Error.hpp  Material.cpp  ObjectDefinitions.hpp  Renderer.cpp  Shader.cpp  Window.cpp  WindowEvents.cpp  WindowEvents.hpp
Source/API/: Vulkan.cmake
Source/API/Vulkan/: DeerVulkan.hpp  Instance.cpp  Instance.hpp  Presenter.cpp  Presenter.hpp  Shader.cpp  Shader.hpp  Texture.hpp
Source/API/Vulkan/Wrapper/: VkCommand.hpp  VkCommandBuffer.hpp  VkCommandPool.hpp  VkDevice.hpp  VkFence.hpp  VkImageView.hpp  VkInstance.hpp  VkPhysicalDevice.hpp  VkQueue.hpp  VkSemaphore.hpp  VkShader.hpp  VkSurface.hpp  VkSwapChain.hpp
Source/Headers/: Versions.hpp  compiler.hpp  enum_helpers.hpp  utilities.hpp
Source/Interface/: FawnVision.ixx  RenderGraph.ixx  RenderPass.ixx  RenderTypes.ixx  Renderer.ixx  Shader.ixx  SharedObjectPool.ixx  Window.ixx  WindowConstants.ixx  WindowsTypes.ixx
cmake/: SetupFawnAlgebra.cmake
embedded/: fullscreen.vert.spv  gen_shader.ps1  gen_shader.sh  images.hpp  shaders.cmake  shaders.hpp  ui.frag.spv  ui.vert.spv
source/api/: vulkan.cmake
source/api/vulkan/: deer_vulkan_core.hpp
source/api/vulkan/wrapper/: buffer.hpp  command.hpp  descriptor.hpp  device.hpp  dispatch.hpp  fence.hpp  image.hpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.hpp  queue.hpp  sampler.hpp  semaphore.hpp  shader.hpp  surface.hpp  swap_chain.hpp
source/headers/: architecture.hpp  assert.hpp  compiler.hpp  enum_helpers.hpp  platform.hpp  utilities.hpp
source/interface/: buffer.ixx  depth_only_pass.ixx  descriptor.ixx  fawn_enums.ixx  fawn_vision.ixx  mesh.ixx  render_graph.ixx  render_pass.ixx  render_pass_context.ixx  renderer.ixx  shader.ixx  texture.ixx  window.ixx
source/interface/ui/: deer_ui.ixx
